2) init.d: add shortname for LAN (need to lldpd daemon for hostname resolutions).<br>
3) init.d: automount.sh: fix check cold boot.<br>
4) goahead: fix swith from/to apcli with apcli bridge only modes.<br>
5) igmpproxy: auto enable Multicast2Unicast in wifi driver at first request.<br>
6) igmpproxy: fix wifi igmp records managment.<br>
7) kernel: mm: page-writeback: inline account_page_dirtied() into single caller.<br>
8) kernel: ipv4: fix nexthop attlen check in fib_nh_match.<br>
9) kernel: hw_nat: spin_(un)lock must be Bottom Halve (prevent deadlock).<br>
10) kernel: ralink wifi: decrease life check packets count, decrease life time and check interval for more speed cleanup died clients.<br>
11) kernel: ralink wifi: add lost increment retry count in jam traffic detect path.<br>
12) kernel: ralink wifi: backport unify jam traffic detect logic from v4 drivers.<br>
13) kernel: ralink wifi: decrease tx ring size (set 64 instead of 128).<br>
14) kernel: ralink wifi: limit to 16 numbers of mcast packets in normal/ps queue.<br>
15) kernel: raeth: fix raise spurious interrupts.<br>
16) kernel: fastroute: increase CB offcet (found used offset 41 in wifi drivers).<br>
<br>
<br>
<b>1.1.x</b><br>
1) defaults: disable M2U by default (if need must be enable in WebUI).<br>
2) igmpproxy: rework snooping managment code (temp disable static records managent).<br>
3) kernel: ralink wifi: fix tx ring full issue at M2U enabled.<br>
4) kernel: ralink wifi: fix m2u filter tabel. Add MDNS and fix IgmpV3 filter.<br>
5) kernel: tcp: limit GSO packets to half cwnd.<br>
<br>
<br>
<b>TODO:</b><br>
1) port support l2tp/pptp hardware NAT offload (really needed??? in sdk very ugly code).<br>
2) add support dualstack ipv6/4 with dhcp v6/ra/6rd uplink support (need more info from ISP).<br>
3) add vlan support logic and web configure (need more info by NAG).<br>
4) full russian ui (need help community or employ the web developer).<br>
<br>
<br>
<br>