@@ -248,9 +248,9 @@ VOID	APSendPackets(
 ========================================================================
 */
 #ifdef IGMP_SNOOP_SUPPORT
-#define MCAST_DROP_BUDGET	(MAX_PACKETS_IN_QUEUE*2)			/* how many pkts skip by snoop if tx full for help free txq */
-static INT IgmpSnoopEnable, IgmpSnoopDropCountLimit, RetryLimitsNeedRestore;	/* need global */
-TX_RTY_CFG_STRUC TxRtyCfg,TxRtyCfgtmp;						/* temp store retry limits */
+#define MCAST_DROP_BUDGET 7000					/* how many pkts send this short limits if tx full for help free txq 7k pkts per 1500b ~ 10Mb */
+static INT IgmpSnoopDropCountLimit, RetryLimitsNeedRestore;	/* need global */
+TX_RTY_CFG_STRUC TxRtyCfg, TxRtyCfgtmp;				/* temp store retry limits */
 #endif
 
 NDIS_STATUS APSendPacket(
@@ -270,7 +270,7 @@ NDIS_STATUS APSendPacket(
 	MAC_TABLE_ENTRY *pMacEntry = NULL;
 	unsigned long	IrqFlags;
 #ifdef IGMP_SNOOP_SUPPORT
-	INT			InIgmpGroup = IGMP_NONE;
+	INT InIgmpGroup = IGMP_NONE;
 	PMULTICAST_FILTER_TABLE_ENTRY pGroupEntry = NULL;
 #endif /* IGMP_SNOOP_SUPPORT */
 	MULTISSID_STRUCT *pMbss = NULL;
@@ -406,7 +406,7 @@ NDIS_STATUS APSendPacket(
 		pMbss = &pAd->ApCfg.MBSSID[apidx];
 
 #ifdef IGMP_SNOOP_SUPPORT
-	if (IgmpSnoopEnable)
+	if (pAd->ApCfg.IgmpSnoopEnable)
 	{
 		UCHAR FromWhichBSSID, checkIgmpPkt = TRUE;
 
@@ -579,31 +579,31 @@ NDIS_STATUS APSendPacket(
 	/* 3. otherwise, transmit the frame */
 	else /* (PsMode == PWR_ACTIVE) || (PsMode == PWR_UNKNOWN) */
 	{
-
-
 #ifdef IGMP_SNOOP_SUPPORT
 		/* if it's a mcast packet in igmp gourp. */
 		/* ucast clone it for all members in the gourp. */
-		if(IgmpSnoopEnable && (((InIgmpGroup == IGMP_IN_GROUP) && pGroupEntry && (IgmpMemberCnt(&pGroupEntry->MemberList) > 0)) || (InIgmpGroup == IGMP_PKT)))
+		if(pAd->ApCfg.IgmpSnoopEnable && (((InIgmpGroup == IGMP_IN_GROUP) && pGroupEntry && (IgmpMemberCnt(&pGroupEntry->MemberList) > 0)) || (InIgmpGroup == IGMP_PKT)))
 		{
 			NDIS_STATUS PktCloneResult = IgmpPktClone(pAd, pSrcBufVA, pPacket, InIgmpGroup, pGroupEntry, QueIdx, UserPriority);
 			RELEASE_NDIS_PACKET(pAd, pPacket, NDIS_STATUS_SUCCESS);
 			if (PktCloneResult == NDIS_STATUS_RESOURCES) {
-			    /* disable multicast to unicast before txq not freed */
-			    //printk("TxSwQueue FULL, temp disable M2U!\n");
-			    IgmpSnoopEnable=0;
-			    IgmpSnoopDropCountLimit=MCAST_DROP_BUDGET;
+			    /* printk("TxSwQueue FULL, temp decrease TxRetry limits\n"); */
 			    /* temp set S/L retry to 0 for fast drop packets */
 			    RTMP_IO_READ32(pAd, TX_RTY_CFG, &TxRtyCfg.word);
 			    TxRtyCfgtmp.word = TxRtyCfg.word;
-			    TxRtyCfg.field.LongRtyLimit = 0x0;
-			    TxRtyCfg.field.ShortRtyLimit = 0x0;
+			    TxRtyCfg.field.LongRtyLimit = 0x1;
+			    TxRtyCfg.field.ShortRtyLimit = 0x1;
 			    RTMP_IO_WRITE32(pAd, TX_RTY_CFG, TxRtyCfg.word);
-			    RetryLimitsNeedRestore=1;
+			    /* Flag for restore shot retry Limits */
+			    RetryLimitsNeedRestore = 1;
+			    /* How packets try send with short timeout */
+			    IgmpSnoopDropCountLimit=MCAST_DROP_BUDGET;
+			    /* Increase send error counter */
+			    pMacEntry->ContinueTxFailCnt++;
 			    /* do not return STATUS RESOURCE */
-			    return NDIS_STATUS_FAILURE;
+			    PktCloneResult = NDIS_STATUS_FAILURE;
 			}
-			return PktCloneResult; /* need to alway return to prevent skb double free. */
+			return PktCloneResult; /* need to always return to prevent skb double free. */
 		}
 		else
 #endif /* IGMP_SNOOP_SUPPORT */
@@ -635,12 +635,8 @@ NDIS_STATUS APSendPacket(
 	if (IgmpSnoopDropCountLimit > 0) {
 	    IgmpSnoopDropCountLimit--;
 	} else {
-	    /* activate/reactivate snooping after some normal ptk recived */
-	    if (IgmpSnoopEnable != pAd->ApCfg.IgmpSnoopEnable)
-		IgmpSnoopEnable = pAd->ApCfg.IgmpSnoopEnable;
-
 	    /* restore S/L retry limits */
-	    if (RetryLimitsNeedRestore) {
+	    if (RetryLimitsNeedRestore == 1) {
 		RTMP_IO_READ32(pAd, TX_RTY_CFG, &TxRtyCfg.word);
 		TxRtyCfg.field.LongRtyLimit = TxRtyCfgtmp.field.LongRtyLimit;
 		TxRtyCfg.field.ShortRtyLimit = TxRtyCfgtmp.field.ShortRtyLimit;
@@ -4112,7 +4108,7 @@ VOID APRxDataFrameAnnounce(
 
 
 #ifdef IGMP_SNOOP_SUPPORT
-		if (IgmpSnoopEnable && pEntry
+		if (pAd->ApCfg.IgmpSnoopEnable && pEntry
 			&& (IS_ENTRY_CLIENT(pEntry) || IS_ENTRY_WDS(pEntry))
 			&& IS_MULTICAST_MAC_ADDR(pRxBlk->pHeader->Addr3))
 		{
